REFACTOR: Modernize pricing calculation with Java 17 switch expressions and records